k8s/apps/writefreely/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: writefreely
  labels:
    name: writefreely
