k8s/apps/writefreely/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: writefreely
  namespace: writefreely
  labels:
    app: writefreely
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: writefreely
